outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-22_21-21-05/evaluations/problem_eval-6525770946433453392_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of local and global factors based on the proximity to the destination, using a decay factor to emphasize local optimization as the destination is approached, while also incorporating a novel penalty mechanism that scales with the distance to the destination to discourage detours.}
                                                                                                                                                                                                                                                                                                       ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of local and global factors based on the proximity to the destination, using a decay factor to emphasize local optimization as the destination is approached, while also incorporating a novel penalty mechanism that scales with the distance to the destination to discourage detours.}
                                                                                                                                                                                                                                                                                                       ^
SyntaxError: unmatched '}'
